sofa/dr-producer-mtls.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: producer
spec:
    host: producer
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
    subsets:
    - name: v1
      labels:
          version: v1
    - name: v2
      labels:
          version: v2
