sofa/mtls-disable-consumer.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: consumer-disabel-mtls
spec:
    host: "consumer.dubbo.svc.cluster.local"
    trafficPolicy:
      tls:
        mode: DISABLE
