sofa/producer-destinationrule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: producer
spec:
    host: producer
    subsets:
    - name: v1
      labels:
          version: v1
    - name: v2
      labels:
          version: v2
