sofa/producer-vs-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: producer-v2
spec:
    hosts: 
    - producer
    http:
    - route:
      - destination:
          host: producer
          subset: v2
