sofa/vs-producer-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: producer-v1
spec:
    hosts: 
    - producer
    http:
    - route:
      - destination:
          host: producer
          subset: v1
